--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "motion": "^12.23.24",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
+    "react-hot-toast": "^2.6.0",
     "react-router-dom": "^7.9.2"
   },
   "devDependencies": {
